gccida/c1/simplify_shift_const
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_shift_const/src/combine.c:9380:35: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  simplify_shift_const( rtx x, rtx_code code, machine_mode result_mode, rtx varop, int orig_count) 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_shift_const/src/combine.c:9380:50: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_shift_const( rtx x, rtx_code code, machine_mode result_mode, rtx varop, int orig_count) 
                                                 ^
                                                 enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_shift_const/src/combine.c:9383:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v6; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_shift_const/src/combine.c:9385:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_shift_const/src/combine.c:9388:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_shift_const/src/combine.c:9395:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_shift_const/src/combine.c:9398:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v22; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_shift_const/src/combine.c:9402:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v26; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_shift_const/src/combine.c:9409:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v33; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_shift_const/src/combine.c:9419:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v43; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_shift_const/src/combine.c:9420:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v44; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_shift_const/src/combine.c:9423:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v47; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_shift_const/src/combine.c:9427:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v51; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_shift_const/src/combine.c:9436:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v60; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_shift_const/src/combine.c:9449:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v73; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_shift_const/src/combine.c:9458:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v82; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_shift_const/src/combine.c:9465:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v89; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_shift_const/src/combine.c:9469:4: error: expected ';' after expression
rtx v93; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_shift_const/src/combine.c:9469:5: error: use of undeclared identifier 'v93'
rtx v93; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_shift_const/src/obj/combine.o] Error 1
